--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = [
     {name = "Lukas Waschul",email = "xy@xy.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4.0"
 dependencies = [
-    "pandas (>=2.3.0,<3.0.0)"
+    "pandas (>=2.3.0,<3.0.0)",
+    "tkhtmlview (>=0.3.1,<0.4.0)"
 ]
 
 [tool.poetry]
