Implement CI/CD workflows, enhance deployment process, and embed README content
- Added GitHub Actions workflows for build and release processes in `build.yml` and `dev.yml`.
- Created deployment guide in `DEPLOYMENT.md` detailing build and release steps.
- Introduced version management script `release.py` for version bumping and tagging.
- Developed automated release script `release_to_main.py` for streamlined releases from `dev` to `main`.
- Enhanced build scripts (`build.bat`, `build.sh`) for local builds on Windows and Linux/macOS.
- Integrated README embedding functionality in `embed_readme.py` to ensure availability in built executables.
- Updated `home_controller.py` and `home_view.py` to display README content in the application.
- Modified `.gitignore` to exclude deployment artifacts and auto-generated files.
- Updated `requirements.txt` to include build dependencies.
- Created Inno Setup script `installer.iss` for Windows installer creation.
- Documented branching strategy in `BRANCHING_STRATEGY.md` for clarity on development and release processes.

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,37 @@ Desktop.ini
 
 # CSVCom specific
 *.csv
+
+# Deployment artifacts
+*.spec
+
+# Installer files
+*.exe
+*.msi
+*.dmg
+*.pkg
+
+# Coverage reports
+htmlcov/
+.coverage
+coverage.xml
+*.cover
+
+# pytest cache
+.pytest_cache/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Auto-generated files
+src/csvlotte/utils/embedded_readme.py
