Refactor release process and enhance version management
- Merged functionality from release_to_main.py into release.py for a unified release process.
- Added support for beta and release candidate version types in version incrementing.
- Implemented functions to handle GitHub repository information and release status checks.
- Enhanced user prompts and instructions for creating pull requests and managing releases.
- Improved error handling and user feedback throughout the release process.
- Updated help documentation to reflect new versioning options and usage instructions.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -213,7 +213,7 @@ jobs:
           ### Changes
           See commit history for detailed changes in this release.
         draft: false
-        prerelease: ${{ !startsWith(github.ref, 'refs/tags/') }}
+        prerelease: ${{ contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc') }}
         files: |
           dist/windows/CSVLotte-Windows.zip
           dist/linux/CSVLotte-Linux.tar.gz
