--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,10 @@ jobs:
         pip install -r requirements.txt
         pip install PyInstaller
     
+    - name: Set up Python path
+      run: |
+        echo "PYTHONPATH=${{ github.workspace }}/src" >> $GITHUB_ENV
+    
     - name: Build executable
       run: |
         python embed_readme.py
@@ -95,6 +99,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install PyInstaller
+    
+    - name: Set up Python path
+      run: |
+        echo "PYTHONPATH=${{ github.workspace }}/src" >> $GITHUB_ENV
     
     - name: Build executable
       run: |
@@ -131,6 +139,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install PyInstaller
+    
+    - name: Set up Python path
+      run: |
+        echo "PYTHONPATH=${{ github.workspace }}/src" >> $GITHUB_ENV
     
     - name: Build executable
       run: |
