Add tag triggers for beta and release candidate versions in workflow

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,6 +3,9 @@ name: Development Build
 on:
   push:
     branches: [ dev ]
+    tags:
+      - 'v*-beta.*'
+      - 'v*-rc.*'
   pull_request:
     branches: [ dev ]
 
